fix (item): capitalization :nerd_face:

--- a/src/markup/patterns/drizzle/partials/item.hbs
+++ b/src/markup/patterns/drizzle/partials/item.hbs
@@ -122,7 +122,7 @@ hidden: true
     {{#unless data.sourceless}}
       <div class="drizzle-pattern__header">
         <h3 class="drizzle-pattern__demo-box-title">HTML</h3>
-        <button class="drizzle-pattern__copy-button">copy</button>
+        <button class="drizzle-pattern__copy-button">Copy</button>
       </div>
       <pre class="drizzle-pattern__demo-box drizzle-pattern__demo-box--code"><code class="drizzle-pattern__source language-markup">{{{patternSource id @root}}}</code></pre>
     {{/unless}}
