--- a/src/markup/patterns/components/defaults/list--unordered.hbs
+++ b/src/markup/patterns/components/defaults/list--unordered.hbs
@@ -3,9 +3,9 @@ name: List (unordered)
 notes: |
   Use this to create default-looking unordered lists.
 ---
-<ol class="c-list c-list--unordered">
+<ul class="c-list c-list--unordered">
   <li>Lorem ipsum dolor sit amet</li>
   <li>Consectetur adipiscing elit</li>
   <li>Quisque viverra a ex at semper</li>
   <li>Cras sagittis elit vel porta vehicula</li>
-</ol>
+</ul>
