Fix double slash in sidebar for svg sprite link

--- a/src/markup/patterns/drizzle/partials/sidebar.hbs
+++ b/src/markup/patterns/drizzle/partials/sidebar.hbs
@@ -42,7 +42,7 @@ hidden: true
           </li>
         {{/each}}
         <li>
-          {{> nav-item label="SVG Sprite" url="/svg/symbol/sprite.symbol.html"}}
+          {{> nav-item label="SVG Sprite" url="svg/symbol/sprite.symbol.html"}}
         </li>
       </ul>
     </div>
