fix: Convert name spacing to more comprehendable words. Update button naming
fix: missed classes (pr squash)

--- a/src/markup/layout/page.hbs
+++ b/src/markup/layout/page.hbs
@@ -11,7 +11,7 @@
   {{> patterns.drizzle.partials.stylesheet-link-tags}}
 </head>
 <body class="{{body-class}}">
-  <a class="c-btn c-btn--primary c-skip-to-content" href="#main-content">Skip to main content</a>
+  <a class="cmp-button cmp-button--primary cmp-skip-to-content" href="#main-content">Skip to main content</a>
 
   <main id="main-content">
     {{#block "body"}}
