--- a/src/markup/pages/demos/common-elements.hbs
+++ b/src/markup/pages/demos/common-elements.hbs
@@ -4,7 +4,7 @@ order: 20
 layout: page
 ---
 
-<div class="o-width-limiter o-width-limiter--sm u-margin-top-xl u-padding-bottom-xl">
+<div class="obj-width-limiter obj-width-limiter--sm util-margin-top-xl util-padding-bottom-xl">
 
   <h1>{{ title }}</h1>
 
@@ -35,7 +35,7 @@ layout: page
 
   <p>This paragraph is used to show space between the previous and following elements. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras a ex nisl. Nullam sit amet sodales ante. Duis aliquet lorem sit amet erat commodo rhoncus.</p>
 
-  <div class="u-margin-top-lg u-margin-bottom-lg">
+  <div class="util-margin-top-lg util-margin-bottom-lg">
     <ol>
       <li>Lorem ipsum dolor sit amet</li>
       <li>Consectetur adipiscing elit</li>
@@ -46,7 +46,7 @@ layout: page
 
   <p>This paragraph is used to show space between the previous and following elements. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras a ex nisl. Nullam sit amet sodales ante. Duis aliquet lorem sit amet erat commodo rhoncus.</p>
 
-  <div class="u-margin-top-lg u-margin-bottom-lg">
+  <div class="util-margin-top-lg util-margin-bottom-lg">
     <ul>
       <li>Lorem ipsum dolor sit amet</li>
       <li>Consectetur adipiscing elit</li>
