--- a/src/markup/pages/documentation/grid.hbs
+++ b/src/markup/pages/documentation/grid.hbs
@@ -11,50 +11,50 @@ layout: drizzle
 
 <p class="drizzle-p">Most grid layouts are going to use either a two, three, or four column layout. The basic grid system includes all of the classes needed to create a simple layout with class names that are spelled out and easy to read.</p>
 
-<div class="o-grid">
-  <div class="o-grid__full drizzle-example-block"></div>
+<div class="obj-grid">
+  <div class="obj-grid__full drizzle-example-block"></div>
 
-  <div class="o-grid__half drizzle-example-block"></div>
-  <div class="o-grid__half drizzle-example-block"></div>
+  <div class="obj-grid__half drizzle-example-block"></div>
+  <div class="obj-grid__half drizzle-example-block"></div>
 
-  <div class="o-grid__third drizzle-example-block"></div>
-  <div class="o-grid__third drizzle-example-block"></div>
-  <div class="o-grid__third drizzle-example-block"></div>
+  <div class="obj-grid__third drizzle-example-block"></div>
+  <div class="obj-grid__third drizzle-example-block"></div>
+  <div class="obj-grid__third drizzle-example-block"></div>
 
-  <div class="o-grid__quarter drizzle-example-block"></div>
-  <div class="o-grid__quarter drizzle-example-block"></div>
-  <div class="o-grid__quarter drizzle-example-block"></div>
-  <div class="o-grid__quarter drizzle-example-block"></div>
+  <div class="obj-grid__quarter drizzle-example-block"></div>
+  <div class="obj-grid__quarter drizzle-example-block"></div>
+  <div class="obj-grid__quarter drizzle-example-block"></div>
+  <div class="obj-grid__quarter drizzle-example-block"></div>
 
-  <div class="o-grid__third drizzle-example-block"></div>
-  <div class="o-grid__two-third drizzle-example-block"></div>
+  <div class="obj-grid__third drizzle-example-block"></div>
+  <div class="obj-grid__two-third drizzle-example-block"></div>
 
-  <div class="o-grid__quarter drizzle-example-block"></div>
-  <div class="o-grid__three-quarter drizzle-example-block"></div>
+  <div class="obj-grid__quarter drizzle-example-block"></div>
+  <div class="obj-grid__three-quarter drizzle-example-block"></div>
 </div>
 
 <pre class="drizzle-u-borderTop drizzle-u-pad">
   <code class="language-markup">
-    &lt;div class="o-grid"&gt;
-      &lt;div class="o-grid__full"&gt;&lt;/div&gt;
+    &lt;div class="obj-grid"&gt;
+      &lt;div class="obj-grid__full"&gt;&lt;/div&gt;
 
-      &lt;div class="o-grid__half"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__half"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__half"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__half"&gt;&lt;/div&gt;
 
-      &lt;div class="o-grid__third"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__third"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__third"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__third"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__third"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__third"&gt;&lt;/div&gt;
 
-      &lt;div class="o-grid__quarter"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__quarter"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__quarter"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__quarter"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__quarter"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__quarter"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__quarter"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__quarter"&gt;&lt;/div&gt;
 
-      &lt;div class="o-grid__third"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__two-third"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__third"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__twobj-third"&gt;&lt;/div&gt;
 
-      &lt;div class="o-grid__quarter"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__three-quarter"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__quarter"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__three-quarter"&gt;&lt;/div&gt;
     &lt;/div&gt;
   </code>
 </pre>
@@ -65,108 +65,108 @@ layout: drizzle
     <th>Description</th>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid</code></td>
+    <td><code class="language-css">.obj-grid</code></td>
     <td>This is the class on the container that wraps around the grid columns.</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__full</code></td>
+    <td><code class="language-css">.obj-grid__full</code></td>
     <td>For columns that span the entire width of the grid (12 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__three-quarter</code></td>
+    <td><code class="language-css">.obj-grid__three-quarter</code></td>
     <td>For columns that three quarter width of the grid (9 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__two-third</code></td>
+    <td><code class="language-css">.obj-grid__twobj-third</code></td>
     <td>For columns that span two third width of the grid (8 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__half</code></td>
+    <td><code class="language-css">.obj-grid__half</code></td>
     <td>For columns that span half of the width of the grid (6 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__third</code></td>
+    <td><code class="language-css">.obj-grid__third</code></td>
     <td>For columns that span a third of the width of the grid (4 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__quarter</code></td>
+    <td><code class="language-css">.obj-grid__quarter</code></td>
     <td>For columns that span a quarter of the width of the grid (3 columns).</td>
   </tr>
 </table>
 
-<h2 class="drizzle-heading-2 u-margin-top-xxl">Responsive Grid</h2>
+<h2 class="drizzle-heading-2 util-margin-top-xxl">Responsive Grid</h2>
 
 <p class="drizzle-p">To adjust a the width of a column at different breakpoints you can add <code class="language-css">@sm</code>, <code class="language-css">@md</code>, <code class="language-css">@lg</code>, <code class="language-css">@xl</code> after any of the grid classes:</p>
 
-<div class="o-grid">
-  <div class="o-grid__half o-grid__third@sm drizzle-example-block"></div>
-  <div class="o-grid__half o-grid__third@sm drizzle-example-block"></div>
-  <div class="o-grid__full o-grid__third@sm drizzle-example-block"></div>
+<div class="obj-grid">
+  <div class="obj-grid__half obj-grid__third@sm drizzle-example-block"></div>
+  <div class="obj-grid__half obj-grid__third@sm drizzle-example-block"></div>
+  <div class="obj-grid__full obj-grid__third@sm drizzle-example-block"></div>
 
-  <div class="o-grid__full o-grid__quarter@md drizzle-example-block"></div>
-  <div class="o-grid__full o-grid__half@md drizzle-example-block"></div>
-  <div class="o-grid__full o-grid__quarter@md drizzle-example-block"></div>
+  <div class="obj-grid__full obj-grid__quarter@md drizzle-example-block"></div>
+  <div class="obj-grid__full obj-grid__half@md drizzle-example-block"></div>
+  <div class="obj-grid__full obj-grid__quarter@md drizzle-example-block"></div>
 </div>
 
 <pre class="drizzle-u-borderTop drizzle-u-pad">
   <code class="language-markup">
-    &lt;div class="o-grid"&gt;
-      &lt;div class="o-grid__half o-grid__third@sm"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__half o-grid__third@sm"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__full o-grid__third@sm"&gt;&lt;/div&gt;
+    &lt;div class="obj-grid"&gt;
+      &lt;div class="obj-grid__half obj-grid__third@sm"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__half obj-grid__third@sm"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__full obj-grid__third@sm"&gt;&lt;/div&gt;
 
-      &lt;div class="o-grid__full o-grid__quarter@md"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__full o-grid__half@md"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__full o-grid__quarter@md"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__full obj-grid__quarter@md"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__full obj-grid__half@md"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__full obj-grid__quarter@md"&gt;&lt;/div&gt;
     &lt;/div&gt;
   </code>
 </pre>
 
-<h2 class="drizzle-heading-2 u-margin-top-xxl">Extended Grid</h2>
+<h2 class="drizzle-heading-2 util-margin-top-xxl">Extended Grid</h2>
 
 <p class="drizzle-p">In addition to the simple grid system there is an extended grid system that allows for any combination of a 12 column grid system. The extended grid system can also be used responsively in the same way that as the gimple grid system.</p>
 
 
-<div class="o-grid">
-  <div class="o-grid__1-12 drizzle-example-block"></div>
-  <div class="o-grid__11-12 drizzle-example-block"></div>
+<div class="obj-grid">
+  <div class="obj-grid__1-12 drizzle-example-block"></div>
+  <div class="obj-grid__11-12 drizzle-example-block"></div>
 
-  <div class="o-grid__2-12 drizzle-example-block"></div>
-  <div class="o-grid__10-12 drizzle-example-block"></div>
+  <div class="obj-grid__2-12 drizzle-example-block"></div>
+  <div class="obj-grid__10-12 drizzle-example-block"></div>
 
-  <div class="o-grid__3-12 drizzle-example-block"></div>
-  <div class="o-grid__9-12 drizzle-example-block"></div>
+  <div class="obj-grid__3-12 drizzle-example-block"></div>
+  <div class="obj-grid__9-12 drizzle-example-block"></div>
 
-  <div class="o-grid__4-12 drizzle-example-block"></div>
-  <div class="o-grid__8-12 drizzle-example-block"></div>
+  <div class="obj-grid__4-12 drizzle-example-block"></div>
+  <div class="obj-grid__8-12 drizzle-example-block"></div>
 
-  <div class="o-grid__5-12 drizzle-example-block"></div>
-  <div class="o-grid__7-12 drizzle-example-block"></div>
+  <div class="obj-grid__5-12 drizzle-example-block"></div>
+  <div class="obj-grid__7-12 drizzle-example-block"></div>
 
-  <div class="o-grid__6-12 drizzle-example-block"></div>
-  <div class="o-grid__6-12 drizzle-example-block"></div>
+  <div class="obj-grid__6-12 drizzle-example-block"></div>
+  <div class="obj-grid__6-12 drizzle-example-block"></div>
 </div>
 
 <pre class="drizzle-u-borderTop drizzle-u-pad">
   <code class="language-markup">
-    &lt;div class="o-grid"&gt;
-      &lt;div class="o-grid__1-12"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__11-12"&gt;&lt;/div&gt;
+    &lt;div class="obj-grid"&gt;
+      &lt;div class="obj-grid__1-12"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__11-12"&gt;&lt;/div&gt;
 
-      &lt;div class="o-grid__2-12"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__10-12"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__2-12"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__10-12"&gt;&lt;/div&gt;
 
-      &lt;div class="o-grid__3-12"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__9-12"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__3-12"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__9-12"&gt;&lt;/div&gt;
 
-      &lt;div class="o-grid__4-12"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__8-12"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__4-12"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__8-12"&gt;&lt;/div&gt;
 
-      &lt;div class="o-grid__5-12"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__7-12"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__5-12"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__7-12"&gt;&lt;/div&gt;
 
-      &lt;div class="o-grid__6-12"&gt;&lt;/div&gt;
-      &lt;div class="o-grid__6-12"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__6-12"&gt;&lt;/div&gt;
+      &lt;div class="obj-grid__6-12"&gt;&lt;/div&gt;
     &lt;/div&gt;
   </code>
 </pre>
@@ -177,55 +177,55 @@ layout: drizzle
     <th>Description</th>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid</code></td>
+    <td><code class="language-css">.obj-grid</code></td>
     <td>This is the class on the container that wraps around the grid columns.</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__12-12</code></td>
+    <td><code class="language-css">.obj-grid__12-12</code></td>
     <td>For columns that span the entire width of the grid (12 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__11-12</code></td>
+    <td><code class="language-css">.obj-grid__11-12</code></td>
     <td>For columns that span 11/12ths of the grid (11 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__10-12</code></td>
+    <td><code class="language-css">.obj-grid__10-12</code></td>
     <td>For columns that span 5/6ths width of the grid (10 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__9-12</code></td>
+    <td><code class="language-css">.obj-grid__9-12</code></td>
     <td>For columns that three quarter width of the grid (9 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__8-12</code></td>
+    <td><code class="language-css">.obj-grid__8-12</code></td>
     <td>For columns that span two third width of the grid (8 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__7-12</code></td>
+    <td><code class="language-css">.obj-grid__7-12</code></td>
     <td>For columns that span 7/12ths width of the grid (7 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__6-12</code></td>
+    <td><code class="language-css">.obj-grid__6-12</code></td>
     <td>For columns that span half of the width of the grid (6 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__5-12</code></td>
+    <td><code class="language-css">.obj-grid__5-12</code></td>
     <td>For columns that span 5/12ths width of the grid (5 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__4-12</code></td>
+    <td><code class="language-css">.obj-grid__4-12</code></td>
     <td>For columns that span a third of the width of the grid (4 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__3-12</code></td>
+    <td><code class="language-css">.obj-grid__3-12</code></td>
     <td>For columns that span a quarter of the width of the grid (3 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__2-12</code></td>
+    <td><code class="language-css">.obj-grid__2-12</code></td>
     <td>For columns that span one sixth width of the grid (2 columns).</td>
   </tr>
   <tr>
-    <td><code class="language-css">.o-grid__1-12</code></td>
+    <td><code class="language-css">.obj-grid__1-12</code></td>
     <td>For columns that span 1/12th width of the grid (1 columns).</td>
   </tr>
 </table>
