--- a/src/markup/pages/documentation/page-width.hbs
+++ b/src/markup/pages/documentation/page-width.hbs
@@ -3,17 +3,17 @@ title: Page Width
 layout: page
 ---
 
-<div class="o-width-limiter u-padding-top-xl u-margin-bottom-xxl">
+<div class="obj-width-limiter util-padding-top-xl util-margin-bottom-xxl">
   <h1 class="drizzle-heading-1">{{title}}</h1>
 </div>
 
-<div class="u-margin-bottom-xxl">
+<div class="util-margin-bottom-xxl">
   <p class="drizzle-p">By default, text will touch the edge of the browser, like this.</p>
 </div>
 
-<div class="o-width-limiter u-margin-bottom-xxl">
+<div class="obj-width-limiter util-margin-bottom-xxl">
 
-  <p class="drizzle-p">The <code>o-width-limiter</code> object has two primary functions:</p>
+  <p class="drizzle-p">The <code>obj-width-limiter</code> object has two primary functions:</p>
 
   <ol>
     <li class="drizzle-p"><strong>Apply horizontal padding to create a page margin.</strong> When the screen is small, this prevents text from touching the edge of the browser.</li>
@@ -22,6 +22,6 @@ layout: page
 
 </div>
 
-<div class="o-width-limiter o-width-limiter--no-page-margin u-margin-bottom-xxl">
-  <p class="drizzle-p">If you want to use a <code>o-width-limiter</code> but don't want the included page margin, add an additional <code>o-width-limiter--no-page-margin</code> modifier class.</p>
+<div class="obj-width-limiter obj-width-limiter--no-page-margin util-margin-bottom-xxl">
+  <p class="drizzle-p">If you want to use a <code>obj-width-limiter</code> but don't want the included page margin, add an additional <code>obj-width-limiter--no-page-margin</code> modifier class.</p>
 </div>
