--- a/src/markup/pages/documentation/spacing.hbs
+++ b/src/markup/pages/documentation/spacing.hbs
@@ -13,7 +13,7 @@ layout: drizzle
 
 {{#with (data 'spacing')}}
 
-<h2 class="drizzle-heading-2 u-margin-top-xxl">Margin</h2>
+<h2 class="drizzle-heading-2 util-margin-top-xxl">Margin</h2>
 
 <table>
   <thead>
@@ -36,7 +36,7 @@ layout: drizzle
   </tbody>
 </table>
 
-<h2 class="drizzle-heading-2 u-margin-top-xxl">Padding</h2>
+<h2 class="drizzle-heading-2 util-margin-top-xxl">Padding</h2>
 <table>
   <thead>
     <tr>
@@ -60,19 +60,19 @@ layout: drizzle
 {{/with}}
 
 
-<h2 class="drizzle-heading-2 u-margin-top-xxl">Responsive Spacing</h2>
+<h2 class="drizzle-heading-2 util-margin-top-xxl">Responsive Spacing</h2>
 <p class="drizzle-p">To adjust margin and padding at different breakpoints you can add <code class="language-css">@sm</code>, <code class="language-css">@md</code>, <code class="language-css">@lg</code>, <code class="language-css">@xl</code> after any of the spacing classes:</p>
 
 <div>
-  <div class="u-margin-bottom-sm u-margin-bottom-md@md u-margin-bottom-lg@lg drizzle-example-block"></div>
-  <div class="u-margin-bottom-sm u-margin-bottom-md@md u-margin-bottom-lg@lg drizzle-example-block"></div>
-  <div class="u-margin-bottom-sm u-margin-bottom-md@md u-margin-bottom-lg@lg drizzle-example-block"></div>
+  <div class="util-margin-bottom-sm util-margin-bottom-md@md util-margin-bottom-lg@lg drizzle-example-block"></div>
+  <div class="util-margin-bottom-sm util-margin-bottom-md@md util-margin-bottom-lg@lg drizzle-example-block"></div>
+  <div class="util-margin-bottom-sm util-margin-bottom-md@md util-margin-bottom-lg@lg drizzle-example-block"></div>
 </div>
 
 <pre class="drizzle-u-borderTop drizzle-u-pad">
   <code class="language-markup">
-    &lt;div class="u-margin-bottom-sm u-margin-bottom-md@md u-margin-bottom-lg@lg"&gt;&lt;/div&gt;
-    &lt;div class="u-margin-bottom-sm u-margin-bottom-md@md u-margin-bottom-lg@lg"&gt;&lt;/div&gt;
-    &lt;div class="u-margin-bottom-sm u-margin-bottom-md@md u-margin-bottom-lg@lg"&gt;&lt;/div&gt;
+    &lt;div class="util-margin-bottom-sm util-margin-bottom-md@md util-margin-bottom-lg@lg"&gt;&lt;/div&gt;
+    &lt;div class="util-margin-bottom-sm util-margin-bottom-md@md util-margin-bottom-lg@lg"&gt;&lt;/div&gt;
+    &lt;div class="util-margin-bottom-sm util-margin-bottom-md@md util-margin-bottom-lg@lg"&gt;&lt;/div&gt;
   </code>
 </pre>
