--- a/src/markup/pages/index.hbs
+++ b/src/markup/pages/index.hbs
@@ -6,10 +6,10 @@ main-class: drizzle-white-bg
 
 <h1 class="drizzle-heading-1">{{data "global.companyName"}} Design System</h1>
 
-<p class="drizzle-p u-margin-bottom-xl">This UI toolkit is a highly-modular design system for rapid web page development. It contains different materials that can be assembled into more complex page layouts. It includes working examples, code snippets and documentation.</p>
+<p class="drizzle-p util-margin-bottom-xl">This UI toolkit is a highly-modular design system for rapid web page development. It contains different materials that can be assembled into more complex page layouts. It includes working examples, code snippets and documentation.</p>
 
 <h2 class="drizzle-heading-2">Demo Pages</h2>
-<div class="u-margin-bottom-lg">
+<div class="util-margin-bottom-lg">
   <ul>
     {{#each (pages "demos" sortby="order")}}
       <li>
