--- a/src/markup/patterns/components/buttons/btn-with-icon.hbs
+++ b/src/markup/patterns/components/buttons/btn-with-icon.hbs
@@ -7,24 +7,24 @@ notes: |
 variantGroups:
   - name: Color
     set:
-      - c-btn--primary
-      - c-btn--secondary
-      - c-btn--tertiary
+      - cmp-button--primary
+      - cmp-button--secondary
+      - cmp-button--tertiary
   - name: Size
     set:
       - ""
-      - c-btn--lg
-      - c-btn--sm
+      - cmp-button--lg
+      - cmp-button--sm
   - name: Other
     set:
       - ""
-      - c-btn--full-width
+      - cmp-button--full-width
 ---
-<a href="#" class="c-btn">
+<a href="#" class="cmp-button">
   Click Me
 
-  <span class="c-btn__icon">
-    <svg class="c-icon c-icon--chevron" focusable="false" aria-hidden="true">
+  <span class="cmp-button__icon">
+    <svg class="cmp-icon cmp-icon--chevron" focusable="false" aria-hidden="true">
       <use xlink:href="/svg/symbol/svg/sprite.symbol.svg#icon-chevron"></use>
     </svg>
   </span>
