--- a/src/markup/patterns/components/defaults/link.hbs
+++ b/src/markup/patterns/components/defaults/link.hbs
@@ -2,4 +2,4 @@
 notes: |
   Use this to create default-looking links.
 ---
-<a class="c-link" href="#">Click Me</a>
+<a class="cmp-link" href="#">Click Me</a>
