--- a/src/markup/patterns/components/defaults/list--ordered.hbs
+++ b/src/markup/patterns/components/defaults/list--ordered.hbs
@@ -3,7 +3,7 @@ name: List (ordered)
 notes: |
   Use this to create default-looking ordered lists.
 ---
-<ol class="c-list c-list--ordered">
+<ol class="cmp-list cmp-list--ordered">
   <li>Lorem ipsum dolor sit amet</li>
   <li>Consectetur adipiscing elit</li>
   <li>Quisque viverra a ex at semper</li>
