--- a/src/markup/patterns/components/defaults/list--unordered.hbs
+++ b/src/markup/patterns/components/defaults/list--unordered.hbs
@@ -3,7 +3,7 @@ name: List (unordered)
 notes: |
   Use this to create default-looking unordered lists.
 ---
-<ul class="c-list c-list--unordered">
+<ul class="cmp-list cmp-list--unordered">
   <li>Lorem ipsum dolor sit amet</li>
   <li>Consectetur adipiscing elit</li>
   <li>Quisque viverra a ex at semper</li>
