--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -84,7 +84,7 @@
 @import "components/paragraph";
 @import "components/link";
 @import "components/list";
-@import "components/btn";
+@import "components/button";
 @import "components/skip-to-content";
 @import "components/expandable-content";
 @import "components/icon";
