--- a/src/scss/components/_heading.scss
+++ b/src/scss/components/_heading.scss
@@ -1,23 +1,23 @@
-.c-heading-1 {
+.cmp-heading-1 {
   @include h1;
 }
 
-.c-heading-2 {
+.cmp-heading-2 {
   @include h2;
 }
 
-.c-heading-3 {
+.cmp-heading-3 {
   @include h3;
 }
 
-.c-heading-4 {
+.cmp-heading-4 {
   @include h4;
 }
 
-.c-heading-5 {
+.cmp-heading-5 {
   @include h5;
 }
 
-.c-heading-6 {
+.cmp-heading-6 {
   @include h6;
 }
