--- a/src/markup/patterns/components/buttons/btn.hbs
+++ b/src/markup/patterns/components/buttons/btn.hbs
@@ -5,17 +5,17 @@ order: 1
 variantGroups:
   - name: Color
     set:
-      - c-btn--primary
-      - c-btn--secondary
-      - c-btn--tertiary
+      - cmp-button--primary
+      - cmp-button--secondary
+      - cmp-button--tertiary
   - name: Size
     set:
       - ""
-      - c-btn--lg
-      - c-btn--sm
+      - cmp-button--lg
+      - cmp-button--sm
   - name: Other
     set:
       - ""
-      - c-btn--full-width
+      - cmp-button--full-width
 ---
-<a href="#" class="c-btn">Click Me</a>
+<a href="#" class="cmp-button">Click Me</a>
