--- a/src/scss/utilities/_text.scss
+++ b/src/scss/utilities/_text.scss
@@ -1,15 +1,15 @@
-.u-text-center {
+.util-text-center {
   text-align: center;
 }
 
-.u-text-right {
+.util-text-right {
   text-align: right;
 }
 
-.u-text-left {
+.util-text-left {
   text-align: left;
 }
 
-.u-text-subtle {
+.util-text-subtle {
   opacity: 0.8;
 }
