refactor: Change approach to window-height body tag

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -60,10 +60,10 @@
 //    default styling from the browser so we can redefine them here.
 @import "elements/asterisk";
 @import "elements/root";
+@import "elements/html-body";
 @import "elements/a";
 @import "elements/p";
 @import "elements/h1-6";
-@import "elements/body";
 @import "elements/img";
 @import "elements/ol-ul";
 
