feat: install/integrate sparkle

--- a/src/scss/components/_expandable-content.scss
+++ b/src/scss/components/_expandable-content.scss
@@ -2,7 +2,7 @@
   &__button {
     position: relative;
 
-    z-index: $z-index-expandable-content-button;
+    z-index: z-index(1);
   }
 
   &__content {
