--- a/src/scss/components/_skip-to-content.scss
+++ b/src/scss/components/_skip-to-content.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 1rem;
   left: -100%;
-  z-index: $z-index-skip-to-link;
+  z-index: z-index(10);
 
   &:focus {
     left: 1rem;
